Prefer FFM api (even in incubator/preview form) on jdk 17+